<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/counter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_label"
        android:textSize="32sp"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="324dp" />

    <TextView
        android:id="@+id/counter_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="64sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="324dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/subtract_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/subtract_button_label"
            android:textSize="32sp" />

        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48sp"
            android:text="@string/add_button_label"
            android:textSize="32sp" />
    </LinearLayout>

</LinearLayout>